Fix position of invisible character
RISDEV-4253

--- a/frontend/src/styles/invisible-characters.css
+++ b/frontend/src/styles/invisible-characters.css
@@ -19,5 +19,6 @@
   content: "“";
   font-weight: bold;
   font-size: x-large;
+  margin-left: 30px;
   position: absolute;
 }
